[package]
name = "todo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = "1.29.1"
tokio-postgres = "0.7.8"

